--- a/src/main/resources/templates/controller.java.vm
+++ b/src/main/resources/templates/controller.java.vm
@@ -32,6 +32,8 @@ import ${superControllerClassPackage};
 @Controller
 #end
 @RequestMapping("#if(${package.ModuleName})/${package.ModuleName}#end/#if(${controllerMappingHyphenStyle})${controllerMappingHyphen}#else${table.entityPath}#end")
+@Api(tags = "#if(${package.ModuleName})/${package.ModuleName}相关接口")
+#end
 #if(${kotlin})
 class ${table.controllerName}#if(${superControllerClass}) : ${superControllerClass}()#end
 
@@ -45,31 +47,37 @@ public class ${table.controllerName} {
     private ${table.serviceName} ${table.entityPath}Service;
 
     @PostMapping
+    @ApiOperation(value = "新增/修改接口")
     public Result save(@RequestBody ${entity} ${table.entityPath}) {
         return Result.success(${table.entityPath}Service.saveOrUpdate(${table.entityPath}));
         }
 
     @DeleteMapping("/{id}")
+    @ApiOperation(value = "根据id删除")
     public Result delete(@PathVariable Integer id) {
         return Result.success(${table.entityPath}Service.removeById(id));
     }
 
     @PostMapping("/del/batch")
+    @ApiOperation(value = "批量删除")
     public Result deleteBatch(@RequestBody List<Integer> ids){
         return Result.success(${table.entityPath}Service.removeBatchByIds(ids));
     }
 
     @GetMapping("/{id}")
+    @ApiOperation(value = "根据id查找一个")
     public Result findOne(@PathVariable Integer id) {
         return Result.success(${table.entityPath}Service.getById(id));
     }
 
     @GetMapping
+    @ApiOperation(value = "查找所有")
     public Result findAll() {
         return Result.success(${table.entityPath}Service.list());
     }
 
     @GetMapping("/page")
+    @ApiOperation(value = "分页查找")
     public Result findPage(@RequestParam Integer pageNum,
     @RequestParam Integer pageSize) {
         return Result.success(${table.entityPath}Service.page(new Page<>(pageNum, pageSize)));
